# Remarkable-Mobile-Prototyping-Templates

./: .gitignore  LICENSE  PROJECT-MANAGEMENT.md  README.md  install.ps1  install.sh
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: catalog.json
app/src/: catalog.ts  main.ts  renderer.ts  selection.test.ts  selection.ts  style.css  tauri.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  device.rs  lib.rs
docs/: RELEASING.md  TAURI-APP-PLAN.md  install-paper-pro.md  install-rm2.md  methods-format-notes.md
generators/: build_catalog.py  make_app_icon.py
scripts/: build.sh  publish.sh  release.sh
src/: build.py  gen_methods.py  gen_templates.py  make_icons.py  render_previews.py  requirements.txt
templates/universal/: INSTALL.txt  MANIFEST.txt  uxtpl_android_four_col.metadata  uxtpl_android_four_col.template  uxtpl_android_four_col_rm2.metadata  uxtpl_android_four_col_rm2.template  uxtpl_android_four_colgrid.metadata  uxtpl_android_four_colgrid.template  uxtpl_android_four_colgrid_rm2.metadata  uxtpl_android_four_colgrid_rm2.template  uxtpl_android_four_grid.metadata  uxtpl_android_four_grid.template  uxtpl_android_four_grid_rm2.metadata  uxtpl_android_four_grid_rm2.template  uxtpl_android_four_land_col.metadata  uxtpl_android_four_land_col.template  uxtpl_android_four_land_col_rm2.metadata  uxtpl_android_four_land_col_rm2.template  uxtpl_android_four_land_colgrid.metadata  uxtpl_android_four_land_colgrid.template  uxtpl_android_four_land_colgrid_rm2.metadata  (+125 more)
