[package]
name = "app"
version = "0.1.0"
description = "reMarkable UX Templates installer"
authors = ["Martes Delta Co"]
edition = "2021"
rust-version = "1.77"

# The library is what the desktop binary (and future mobile) link against.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ---- device subsystem (SSH install/sync, USB-web backup, keychain) ----
# Behind the `device` feature so the core app always builds; enable to compile the
# tablet integration (needs a physical device to verify end-to-end).
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros"], optional = true }
russh = { version = "0.45", optional = true }
async-trait = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
ureq = { version = "2", optional = true }
# apple-native = the macOS Keychain backend (we ship macOS first; add windows-native /
# sync-secret-service when those platforms are built).
keyring = { version = "3", optional = true, features = ["apple-native"] }
anyhow = { version = "1", optional = true }

[features]
default = []
device = ["dep:tokio", "dep:russh", "dep:async-trait", "dep:tar", "dep:ureq", "dep:keyring", "dep:anyhow"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
